--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,18 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Egaugnal</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet'>
 </head>
 
-<body>
-    <div class="flex-row justify-space-around">
-        <header class="display-flex justify-space-between align-center p-2">
-            <h1>
-                Egaugnal
-            </h1>
-        </header>
-        <main class="container-sm container-fluid mt-5 align-items-center">
+<body class="d-flex h-100 w-100 justify-content-center">
+    <div class="h-100 container justify-content-center pt-3">
+        <main class="d-flex h-100 container justify-content-center align-items-center">
             {{{ body }}}
         </main>
     </div>
