--- a/views/startpage.handlebars
+++ b/views/startpage.handlebars
@@ -1,16 +1,15 @@
-<aside>
-    <div>
-    <button class="btn btn-primary" type="submit">Logout</button>
+<aside class="login-glass">
+    <h1 class="mt-4">Egaugnal</h1>
+    <div class="col">
+        <button class="btn btn-light mt-2 mb-2" type="submit">Logout</button>
     </div>
-    <div>
-    <button class="btn btn-primary" type="submit">High Scores</button>
+    <div class="col">
+        <button class="btn btn-light mb-2" type="submit">High Scores</button>
     </div>
-    <h3>Favourites</h3>
-</aside>
-
-<div class="row align-items-center">
-    <div class="login-card">        
-             <div class="form-group">
+    <h1 class="mt-4">Favourites</h1>
+    <div class="h-100 mt-5">
+        <div class="login-card">
+            <div class="form-group">
                 <label for="language-1">Russian</label>
                 <img src="" alt="">
                 <label for="language-1"></label>
@@ -22,5 +21,9 @@
                 <label for="language-3">Hungarian</label>
             </div>
 
+        </div>
     </div>
-</div>
+</aside>
+<section class="col-11 card-box">
+    <h1>Hi</h1>
+</section>
