--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -14,11 +14,12 @@
                 <input class="form-input" type="password" id="password-login" />
             </div>
             <div class="form-group">
-                <a href="/login">Login</a>
-                <a href="/signup">Signup</a>
+                <button id="loginBtn" type="submit">Login</button>
+                <button id="signupBtn" type="submit">Signup</button>
             </div>
         </form>
     </div>
 </div>
 
-{{!-- <script src=".//login.js"></script> --}}
+<script src="/js/login.js"></script>
+{{!-- <script src="/js/signup.js"></script> --}}
