--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,9 @@
 
 <body class="d-flex h-100 w-100 justify-content-center">
     <div class="h-100 container justify-content-center pt-3">
+        <header class="bigHeader">
+            <h1>Egaugnal</h1>
+        </header>
         <main class="d-flex h-100 container justify-content-center align-items-center">
             {{{ body }}}
         </main>
