correct signup issue

--- a/views/startpage.handlebars
+++ b/views/startpage.handlebars
@@ -1,7 +1,7 @@
 <aside class="login-glass">
     <h3 class="mt-4">Egaugnal</h3>
     <div class="col">
-        <button class="btn btn-light mt-2 mb-2" type="submit">Logout</button>
+        <button id="logout" class="btn btn-light mt-2 mb-2" type="submit">Logout</button>
     </div>
     <div>
     <button class="btn btn-primary" type="submit">High Scores</button>
