--- a/views/startpage.handlebars
+++ b/views/startpage.handlebars
@@ -4,24 +4,22 @@
         <button id="logout" class="btn btn-light mt-2 mb-2" type="submit">Logout</button>
     </div>
     <div>
-    <button class="btn btn-primary" type="submit">High Scores</button>
+        <button class="btn btn-primary" type="submit">High Scores</button>
     </div>
-    <h3 class="mt-4">Favourites</h3>
-    <div class="h-100 mt-5">
-        <div class="login-card">
-            <div class="form-group">
-                <label for="language-1">Russian</label>
-                <img src="" alt="">
-                <label for="language-1"></label>
-            </div>
-            <div class="form-group">
-                <label for="language-2">Spanish</label>
-            </div>
-            <div class="form-group">
-                <label for="language-3">Hungarian</label>
-            </div>
+</aside>
+<div class="h-100 mt-5">
+    <div class="login-card">
+        <div class="form-group">
+            {{#each language}}
+            <a id="foreign_language" href="/learningpage" for="language-1" style="color: white;">{{this.name}}</a>
+            <img src="" alt="">
+            <label for="language-1">native form</label>
+            {{/each}}
+        </div>
+
 
     </div>
 </div>
 
 <script src="/js/logout.js"></script>
+{{!-- <script src="/js/select.js"></script> --}}
