--- a/views/learningcard.handlebars
+++ b/views/learningcard.handlebars
@@ -15,23 +15,19 @@
 
 <div class="h-100 mt-5">
 
-    <h4>
-        {{displayLanguage.name}}
-    </h4>
-    <br>
     <p style="color: white;">{{dispalyWord.word_name}}</p>
     <br>
-    <p style="color: white;">image goes here</p>
+    <p style="color: blue;">image goes here</p>
     <br>
-    <p style="color: white;">'back' speaker 'flip' goes here</p>
+    <p style="color: green;">'back' speaker 'flip' goes here</p>
     <br>
     <textarea name="uesr_guess" id="guess" cols="30" rows="1" placeholder="Your guess"></textarea>
     <br>
     <button id="guessBtn" class="btn btn-light mt-2 mb-2">Submit guess</button>
     <br>
-    <button id="nextBtn" class="btn btn-light mt-2 mb-2">Next Card</button>
+    <button id="nextBtn2" class="btn btn-light mt-2 mb-2">Next Card</button>
 </div>
 
 
-<script src="/js/firstcard.js"></script>
+<script src="/js/nextcard.js"></script>
 <script src="/js/logout.js"></script>
