saving language to local storage, extend seeds with language shortname

--- a/views/learningcard.handlebars
+++ b/views/learningcard.handlebars
@@ -14,7 +14,7 @@
 </aside>
 
 <div class="h-100 mt-5">
-
+<p id="targetLanguage" >{{displayLanguage.name}}</p>
     <p style="color: white;">{{dispalyWord.word_name}}</p>
     <br>
     <p style="color: blue;">image goes here</p>
