--- a/views/learningcard.handlebars
+++ b/views/learningcard.handlebars
@@ -14,12 +14,14 @@
 </aside>
 
 <div class="h-100 mt-5">
-<p id="targetLanguage" >{{displayLanguage.name}}</p>
+<p id="targetLanguage" >{{selectedLanguage.name}}</p>
     <p style="color: white;">{{dispalyWord.word_name}}</p>
     <br>
     <p style="color: blue;">image goes here</p>
     <br>
     <p style="color: green;">'back' speaker 'flip' goes here</p>
+    <audio autobuffer="autobuffer" id="play-sound" src={{audioSource}}></audio>
+    <button onclick="document.getElementById('play-sound').play()">Sound 🔊</button>
     <br>
     <textarea name="uesr_guess" id="guess" cols="30" rows="1" placeholder="Your guess"></textarea>
     <br>
