--- a/views/learningcard.handlebars
+++ b/views/learningcard.handlebars
@@ -14,18 +14,21 @@
 </aside>
 
 <div class="h-100 mt-5">
-<p id="targetLanguage" >{{displayLanguage.name}}</p>
+<p id="targetLanguage" ></p>
     <p style="color: white;">{{dispalyWord.word_name}}</p>
     <br>
     <p style="color: blue;">image goes here</p>
     <br>
-    <p style="color: green;">'back' speaker 'flip' goes here</p>
+    <button id="flipBtn" class="btn btn-light mt-2 mb-2">flip</button>
+    <br>
+    <p style="color: green;">speaker goes here</p>
+    <br>
+    <button id="nextBtn2" class="btn btn-light mt-2 mb-2">Next Card</button>
     <br>
     <textarea name="uesr_guess" id="guess" cols="30" rows="1" placeholder="Your guess"></textarea>
     <br>
     <button id="guessBtn" class="btn btn-light mt-2 mb-2">Submit guess</button>
     <br>
-    <button id="nextBtn2" class="btn btn-light mt-2 mb-2">Next Card</button>
 </div>
 
 
