--- a/views/learningpage.handlebars
+++ b/views/learningpage.handlebars
@@ -14,21 +14,21 @@
 </aside>
 
 <div class="h-100 mt-5">
-    <p id="targetLanguage" style="display: none;">{{displayLanguage.name}}</p>
+    <p id="targetLanguage" style="display: none;">{{displayLanguage.short}}</p>
     <br>
     <p style="color: white;">{{dispalyWord.word_name}}</p>
     <br>
     <p style="color: white;">image goes here</p>
     <br>
-    <p style="color: white;">'back' speaker goes here</p>
-    <br>
     <button id="flipBtn" class="btn btn-light mt-2 mb-2">flip</button>
+    <br>
+    <p style="color: white;">speaker goes here</p>
+    <br>
+    <button id="nextBtn" class="btn btn-light mt-2 mb-2">Next Card</button>
     <br>
     <textarea name="uesr_guess" id="guess" cols="30" rows="1" placeholder="Your guess"></textarea>
     <br>
     <button id="guessBtn" class="btn btn-light mt-2 mb-2">Submit guess</button>
-    <br>
-    <button id="nextBtn" class="btn btn-light mt-2 mb-2">Next Card</button>
 </div>
 
 
