committing before pull

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <div class="d-flex h-100 justify-content-center align-items-center h-100 mt-5 login-glass">
     <div class="d-flex container justify-content-center align-items-center login-card">
         <form class="form login-form mt-3">
-            <h2 class="mx-2">Welcome to Egaugnal! If you say it enough,</h2>
+            <h2 class="mx-2">After a while,</h2>
             <h2 class="mx-2 pb-2">it stops sounding like a foreign language.</h2>
             <div class="d-flex form-group justify-content-center">
                 <label for="name-login"></label>
