--- a/views/startpage.handlebars
+++ b/views/startpage.handlebars
@@ -14,6 +14,22 @@
             <a id="foreign_language" href="/learningpage" for="language-1" style="color: white;">{{this.name}}</a>
             <img src="" alt="">
             <label for="language-1">native form</label>
+                            <div class="login-glass card-container m-2">
+
+                    <h3 class="m-2">
+                        Lang 1 Title
+                        <!-- {{language.id}}.
+                        {{language.name}} -->
+                    </h3>
+                    <div class="image-container">
+
+                    </div>
+                    <h3 class="m-2">
+                        Lang 1 Word
+                        <!-- {{language.id}}.
+                        {{language.name}} -->
+                    </h3>
+                </div>
             {{/each}}
         </div>
 
