--- a/views/learningpage.handlebars
+++ b/views/learningpage.handlebars
@@ -29,7 +29,8 @@
     <br>
     <button id="guessBtn" class="btn btn-light mt-2 mb-2">Submit guess</button>
     <br>
-    <button id="nextBtn" class="btn btn-light mt-2 mb-2">Next Card</button>
+    <a href="/learningcard/{{dispalyWord.id}}">next card</a>
+    <button class="btn btn-light mt-2 mb-2">Next Card</button>
 </div>
 
 
