Create addlanguage.js, languageform.handlebars and add new route

--- a/views/startpage.handlebars
+++ b/views/startpage.handlebars
@@ -6,6 +6,14 @@
     <div>
         <button class="bbtn btn-light mt-2 mb-2" type="submit">High Scores</button>
     </div>
+    {{!-- <div>
+        <button id="addLanguage" class="bbtn btn-light mt-2 mb-2" type="submit">Add Language</button>
+    </div> --}}
+    <div>
+        <a href="/languageform">
+            <button class="btn btn-light mt-2 mb-2">Add language</button>
+        </a>
+    </div>
 </aside>
 <div class="h-100 m-5 login-glass">
     <div class="login-card ">
@@ -24,3 +32,4 @@
 </div>
 
 <script src="/js/logout.js"></script>
+<script src="/js/addlanguage.js"></script>
