making card flipable

--- a/views/startpage.handlebars
+++ b/views/startpage.handlebars
@@ -15,8 +15,9 @@
                 <a id="foreign_language" class="stretched-link" href="/learningpage/languageId/{{id}}/wordIndex/0" for="language-1"
                     style="color: white;">{{this.name}}</a>
                 <img src="" alt="">
-
-                <label for="language-1">native form of {{this.name}}</label>
+                
+                <label for="language-1">native form of {{foreignLanguage}}</label>
+                
             </div>
         </div>
         {{/each}}
