--- a/views/learningpage.handlebars
+++ b/views/learningpage.handlebars
@@ -15,15 +15,17 @@
 
 
 <div class="h-100 mt-5">
+    <p id="englishWord" style="display: none;">{{displayWord.word_name}}</p>
     <br>
-    <p class="btn btn-light mt-2 mb-2" style="color: white;">{{transformWord.text}}</p>
+    <p id="wordToLearn" class="btn btn-light mt-2 mb-2" style="color: white;">{{transformWord.text}}</p>
     <br>
     <img src="{{displayWord.img}}" style="width: 250px" alt="{{displayWord.word_name}}">
     <br>
     <audio autobuffer="autobuffer" id="play-sound" src={{audioSource}}></audio>
     <button onclick="document.getElementById('play-sound').play()">Sound 🔊</button>
     <br>
-    <button id="flipBtn" class="btn btn-light mt-2 mb-2">flip</button>
+    <button id="backBtn" class="btn btn-light mt-2 mb-2">Back</button>
+    <button id="flipBtn" class="btn btn-light mt-2 mb-2">Flip</button>
     <br>
     <textarea name="uesr_guess" id="guess" cols="30" rows="1" placeholder="Your guess"></textarea>
     <br>
@@ -35,6 +37,6 @@
     {{/if}}
 </div>
 
-
+<script src="/js/firstcard.js"></script>
 
 <script src="/js/logout.js"></script>
