pushing up my changes from today mostly language card and handlebars and language model

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,6 +72,11 @@ input {
    line-height: 2rem;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition: background-color 600000s 0s, color 600000s 0s;
+}
+
 .btn-light {
    color: white;
    background-color: #1d21241c;
