--- a/views/learningpage.handlebars
+++ b/views/learningpage.handlebars
@@ -17,6 +17,7 @@
     <div class="d-flex my-2 mx-3 align-items-center justify-content-between">
         <p id="englishWord" style="display: none;">{{displayWord.word_name}}</p>
         <h2 id="wordToLearn" class="mt-2 mb-2" style="color: white;">{{transformWord.text}}</h2>
+        <button id="backBtn" class="btn btn-light mt-2 mb-2">back</button>
         <button id="flipBtn" class="btn btn-light mt-2 mb-2">flip</button>
     </div>
     <div>
@@ -39,6 +40,6 @@
     </div>
 </div>
 
-
+<script src="/js/firstcard.js"></script>
 
 <script src="/js/logout.js"></script>
