adding post route for user to submit to scoreboard

--- a/views/startpage.handlebars
+++ b/views/startpage.handlebars
@@ -4,7 +4,9 @@
         <button id="logout" class="btn btn-light mt-2 mb-2" type="submit">Logout</button>
     </div>
     <div>
-        <button class="bbtn btn-light mt-2 mb-2" type="submit">High Scores</button>
+        <a href="/scorepage">
+        <button class="bbtn btn-light mt-2 mb-2">High Scores</button>
+        </a>
     </div>
 </aside>
 <div class="h-100 m-5 login-glass">
