--- a/views/learningpage.handlebars
+++ b/views/learningpage.handlebars
@@ -9,7 +9,9 @@
         <button id="logout" class="btn btn-light mt-2 mb-2" type="submit">Logout</button>
     </div>
     <div>
-        <button class="btn btn-light mt-2 mb-2" type="submit">High Scores</button>
+       <a href="/scorepage">
+        <button class="bbtn btn-light mt-2 mb-2">High Scores</button>
+        </a>
     </div>
 </aside>
 
