pushing what I copied

--- a/views/learningpage.handlebars
+++ b/views/learningpage.handlebars
@@ -8,8 +8,10 @@
     <div class="m-2">
         <button id="logout" class="btn btn-light m-1" type="submit">Logout</button>
     </div>
-    <div class="m-2">
-        <button class="btn btn-light m-1" type="submit">High Scores</button>
+    <div>
+       <a href="/scorepage">
+        <button class="bbtn btn-light mt-2 mb-2">High Scores</button>
+        </a>
     </div>
 </aside>
 
