--- a/views/scorepage.handlebars
+++ b/views/scorepage.handlebars
@@ -1,13 +1,14 @@
-<aside class="login-glass m-2">
+<aside class="login-glass">
     <h3 class="mt-4">Egaugnal</h3>
-    <div class="m-2">
+    <div>
         <a href="/startpage">
-            <button class="btn btn-light m-1">Home</button>
+            <button class="btn btn-light mt-2 mb-2">Home</button>
         </a>
     </div>
-    <div class="m-2">
-        <button id="logout" class="btn btn-light m-1" type="submit">Logout</button>
+    <div class="col">
+        <button id="logout" class="btn btn-light mt-2 mb-2" type="submit">Logout</button>
     </div>
+
 </aside>
 <div>
     <p class="h-100 m-5 login-glass">{{score.name}}</p>
