--- a/views/scorepage.handlebars
+++ b/views/scorepage.handlebars
@@ -26,7 +26,7 @@
         {{#each display}}
         <div class="m-3">
             <div>
-                <p style="color: white;"> higest score on {{format_date this.createdAt}} was {{this.lesson_score}}</p>
+                <p style="color: white;"> Your score on {{format_date this.createdAt}} was {{this.lesson_score}}</p>
             </div>
         </div>
         {{/each}}
