--- a/views/languageform.handlebars
+++ b/views/languageform.handlebars
@@ -1,17 +1,23 @@
-<aside class="login-glass">
-    <h3 class="mt-4">Egaugnal</h3>
-        <div>
+<aside class="login-glass m-2">
+    <h3 class="m-3">Egaugnal</h3>
+    <div class="m-2">
         <a href="/startpage">
-            <button class="btn btn-light mt-2 mb-2">Home</button>
+            <button class="btn btn-light m-1">Home</button>
         </a>
     </div>
-    <div class="col">
-        <button id="logout" class="btn btn-light mt-2 mb-2" type="submit">Logout</button>
+    <div class="m-2">
+        <button id="logout" class="btn btn-light m-1" type="submit">Logout</button>
     </div>
-    <div>
-        <button class="bbtn btn-light mt-2 mb-2" type="submit">High Scores</button>
+    <div class="m-2">
+        <a href="/scorepage">
+        <button class="btn btn-light m-1">High Scores</button>
+        </a>
     </div>
 </aside>
+
+
+
+
 <div class="d-flex ml-3 justify-content-center align-items-center h-100 login-glass">
     <div class="d-flex container justify-content-center align-items-center">
         <form class="form language-form mt-3">
@@ -21,7 +27,7 @@
               <input id="tags" class="form-input w-100 mx-2" type="text" name="language" placeholder="search">
             </div>
             <div class="d-flex form-group justify-content-center mx-2">
-                <button class="bbtn btn-light mt-2 mb-2" type="submit">Submit</button>
+                <button class="btn btn-light mt-2 mb-2" type="submit">Submit</button>
             </div>
         </form>
     </div>
