slight changes to styles and scorepage classes

--- a/views/languageform.handlebars
+++ b/views/languageform.handlebars
@@ -18,7 +18,7 @@
 
 
 
-<div class="d-flex ml-3 justify-content-center align-items-center h-100 login-glass">
+<div class="d-flex m-2 justify-content-center align-items-center h-100 login-glass">
     <div class="d-flex container justify-content-center align-items-center">
         <form class="form language-form mt-3">
             <h2 class="slogan mx-2">Add Language:</h2>
